--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
                     <div class="caption">
                         <h3>BattleHack 2015 Sticker Set</h3>
                         <p>Collector's Edition.  Gotta catch'em all!</p>
-                        <h3 class="bg-info">$3.99 CAD</h3></p>
+                        <h3 class="bg-info">$3.99</h3></p>
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                     <div class="caption">
                         <h3>Braintree_Dev Earphones</h3>
                         <p>Listen in style :)</p>
-                        <h3 class="bg-info">FREE!!</h3></p>
+                        <h3 class="bg-info">$5.99</h3></p>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                     <div class="caption">
                         <h3>Smart Home Kit</h3>
                         <p>PYH - Pimp your home!</p>
-                        <h3 class="bg-info">Over 9000!!! CAD</h3></p>
+                        <h3 class="bg-info">$9000.00</h3></p>
                     </div>
                 </div>
             </div>
@@ -145,9 +145,9 @@
             <div class="col-lg-12 form-group">
                 <label>Select your item</label>
                 <select class="form-control">
-                    <option>Sticker Set - $3.99 CAD</option>
-                    <option>Braintree_Dev Earphones - FREE</option>
-                    <option>Smart Home Kit - Over 9000!!! CAD</option>
+                    <option value="3.99">Sticker Set - $3.99</option>
+                    <option value="5.99">Braintree_Dev Earphones - $5.99</option>
+                    <option value="9000.00">Smart Home Kit - $9000.00</option>
                 </select>
             </div>
 
