--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
         <div class="row">
             <div class="col-lg-12 form-group">
                 <label>Select your item</label>
-                <select class="form-control">
+                <select class="form-control" name="price">
                     <option value="3.99">Sticker Set - $3.99</option>
                     <option value="5.99">Braintree_Dev Earphones - $5.99</option>
                     <option value="9000.00">Smart Home Kit - $9000.00</option>
